--- a/test.html
+++ b/test.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map_canvas { height: 100% }
-    </style>
-    <script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&sensor=SET_TO_TRUE_OR_FALSE">
-    </script>
-    <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: new google.maps.LatLng(-34.397, 150.644),
-          zoom: 8,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map(document.getElementById("map_canvas"),
-            mapOptions);
-      }
-    </script>
-  </head>
-  <body onload="initialize()">
-    <div id="map_canvas" style="width:100%; height:100%"></div>
-  </body>
+<head>
+
+  <!-- Google Maps API -->
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+  <style type="text/css">
+    html { height: 100% }
+    body { height: 100%; margin: 0; padding: 0 }
+    #map_canvas { height: 100% }
+  </style>
+
+<script type="text/javascript"
+  src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBejUHJM-3LHGni-gM0ZNwzEpuq5e5epus&sensor=true">
+</script>
+<script type="text/javascript">
+  function initialize() {
+    var mapOptions = {
+      center: new google.maps.LatLng(-34.397, 150.644),
+      zoom: 8,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    var map = new google.maps.Map(document.getElementById("map_canvas"),
+      mapOptions);
+  }
+</script>
+
+
+
+<!-- Google Earth API -->
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script>
+  google.load('earth','1',{'other_params':"sensor={true}"});
+</script>
+<script>
+  function init() {
+    //google.earth.createInstance("map3d",initCB, failureCB);
+    // div, success, failure
+  }
+
+  function initCB(instance) {
+    ge = instance;
+    ge.getWindow().setVisibility(true);
+  }
+
+  function failureCB(errorCode) {
+
+  }
+
+  google.setOnLoadCallback(init);
+</script>
+</head>
+<body>
+  <div id="map_canvas" style="width:100%; height:100%"></div>
+  <div id="map3d" style="height: 400px; width: 600px;"></div>
+</body>
 </html>
