--- a/test.html
+++ b/test.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-  <!-- Google Maps API -->
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
   <style type="text/css">
     html { height: 100% }
     body { height: 100%; margin: 0; padding: 0 }
-    #map_canvas { height: 100% }
+    #map-canvas { height: 100% }
   </style>
-
-<script type="text/javascript"
-  src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBejUHJM-3LHGni-gM0ZNwzEpuq5e5epus&sensor=true">
+  <script type="text/javascript"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBejUHJM-3LHGni-gM0ZNwzEpuq5e5epus&sensor=false">
 </script>
 <script type="text/javascript">
   function initialize() {
     var mapOptions = {
-      center: new google.maps.LatLng(-34.397, 150.644),
-      zoom: 8,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
+      center: new google.maps.LatLng(55, 55),
+      zoom: 8
     };
-    var map = new google.maps.Map(document.getElementById("map_canvas"),
+    var map = new google.maps.Map(document.getElementById("map-canvas"),
       mapOptions);
   }
+  google.maps.event.addDomListener(window, 'load', initialize);
 </script>
-
-
 
 <!-- Google Earth API -->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script>
-  google.load('earth','1',{'other_params':"sensor={true}"});
+  google.load('earth','1',{'other_params':"sensor={false}"});
 </script>
 <script>
   function init() {
-    //google.earth.createInstance("map3d",initCB, failureCB);
+    google.earth.createInstance("map3d",initCB, failureCB);
     // div, success, failure
   }
 
   function initCB(instance) {
     ge = instance;
     ge.getWindow().setVisibility(true);
+    setLocation(ge);
+  }
+
+  function setLocation(ge) {
+    var lookAt = ge.createLookAt('');
+    lookAt.setLatitude(55);
+    lookAt.setLongitude(55);
+    lookAt.setRange(800000.0);
+    ge.getView().setAbstractView(lookAt);
   }
 
   function failureCB(errorCode) {
 
   }
-
   google.setOnLoadCallback(init);
 </script>
 </head>
 <body>
-  <div id="map_canvas" style="width:100%; height:100%"></div>
-  <div id="map3d" style="height: 400px; width: 600px;"></div>
+  <div id="map-canvas" style="max-width:100%; height:350px"></div>
+  <div id="map3d" style="display:inline-block; width: 100%; height:350px;">hello</div>
 </body>
 </html>
