@edward trying to put obj into GE

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 			car.velocity = 0;
 			animate();
 
-			/*
 			$(document).keydown(function(e){
 				console.log(e.keyCode);
 				if(e.keyCode == "65"){
@@ -37,8 +36,8 @@
 				}else if(e.keyCode == "83"){
 					car.velocity += .1;
 				}
+				return false;
 			});
-		*/
 		});
 
 
@@ -67,7 +66,7 @@
 			container.appendChild( renderer.domElement );
 
 			window.addEventListener( 'resize', onWindowResize, false );
-			
+
 			var geom = new THREE.Geometry();
 			v1 = new THREE.Vector3(5,0,5);
 			v2 = new THREE.Vector3(3,0,5);
