--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <script src="lib/three.min.js"></script>
 <script src="lib/AssimpJSONLoader.js"></script>
 <script>
+  var leftkey = false,
+      rightkey = false,
+      upkey = false,
+      downkey = false;
 	$(document).ready(function(){
 		var container;
 		var camera;
 		var scene, renderer, objects;
 		var car, object;
-					var mouseX = 0, mouseY = 0;
 
 		init();
 
@@ -72,51 +75,68 @@
 						scene.add( line );
 					}
 				});
+
 				var geometry = new THREE.Geometry();
-					geometry.vertices.push(new THREE.Vector3(-74,0,40));
-					geometry.vertices.push(new THREE.Vector3(-60,0,40));
-					geometry.vertices.push(new THREE.Vector3(-60,0,30));
-					geometry.vertices.push(new THREE.Vector3(-74,0,30));
-					geometry.vertices.push(new THREE.Vector3(-74,0,40));
-				var line = new THREE.Line( geometry, new THREE.LineBasicMaterial({color:0x000000}));
-				lines.push(line);
-				scene.add( line );
+					geometry.vertices.push(new THREE.Vector3(.1,0,.1));
+					geometry.vertices.push(new THREE.Vector3(0,0,.1));
+					geometry.vertices.push(new THREE.Vector3(0,0,0));
+					geometry.vertices.push(new THREE.Vector3(.1,0,0));
+					geometry.vertices.push(new THREE.Vector3(.1,0,.1));
+				car = new THREE.Line( geometry, new THREE.LineBasicMaterial({color:0x000000}));
+				car.direction = 5.6240;
+				car.steering = 0;
+				car.speed = 0;
+				console.log(car);
+
+				scene.add( car );
 				animate();
 			});
 			
 
+		    $(document).keydown(function(e){
+		      if(e.keyCode == 65 || e.keyCode == 37){
+		        leftkey = true;
+		      }else if(e.keyCode == 68 || e.keyCode == 39){
+		        rightkey = true;
+
+		      }else if(e.keyCode == 87 || e.keyCode == 38){
+		        upkey = true;
+		        
+		      }else if(e.keyCode == 83 || e.keyCode == 40){
+		        downkey = true;        
+		      }
+		      return false;
+		    });
+
+
+
+		    $(document).keyup(function(e){
+		      if(e.keyCode == 65 || e.keyCode == 37){
+		        leftkey = false;
+		      }else if(e.keyCode == 68 || e.keyCode == 39){
+		        rightkey = false;
+		      }else if(e.keyCode == 87 || e.keyCode == 38){
+		        upkey = false;
+		      }else if(e.keyCode == 83 || e.keyCode == 40){
+		        downkey = false;        
+		      }
+		      return false;
+		    });
+		  
+
 		}
-/*
-		function loadJSON(file) {
-			var loader = new THREE.JSONLoader();
-        	loader.load( file, modelToScene );
-		}
 
-		function modelToScene( geometry, materials ) {
-            var material = new THREE.MeshFaceMaterial( materials );
-            obj = new THREE.Mesh( geometry, material );
-            obj.scale.set(1,1,1);
-            console.log( obj );
-            scene.add( obj );
-        }
-		function onDocumentMouseMove(event) {
+		function onWindowResize() {
 
-			mouseX = event.clientX - windowHalfX;
-			mouseY = event.clientY - windowHalfY;
+			windowHalfX = window.innerWidth / 2;
+			windowHalfY = window.innerHeight / 2;
+
+			camera.aspect = window.innerWidth / window.innerHeight;
+			camera.updateProjectionMatrix();
+
+			renderer.setSize( window.innerWidth, window.innerHeight );
 
 		}
-*/
-			function onWindowResize() {
-
-				windowHalfX = window.innerWidth / 2;
-				windowHalfY = window.innerHeight / 2;
-
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
-
-				renderer.setSize( window.innerWidth, window.innerHeight );
-
-			}
 
 		function animate() {
 			requestAnimationFrame( animate );
@@ -126,8 +146,48 @@
 		function render() {
 			camera.position.x = 0;
 			camera.position.y = 10;
-			camera.position.z = 15;
+			camera.position.z = 0;
 			camera.lookAt(lines[0].geometry.vertices[0]);
+
+
+		    if(leftkey){
+		      if(car.steering<1){ car.steering += 0.01; }
+		    }else if(rightkey){
+		      if(car.steering>-1){  car.steering -= 0.01; }
+		    }else{
+		      car.steering *= 0.1;
+		    }
+
+		    if(downkey){
+		      car.power = 1;
+		    }else if(upkey){
+		      car.power = -1;
+		    }else{
+		      car.power = 0;
+		    }
+
+		    if(car.speed + car.power){
+		      car.speed += car.power;
+		    }
+
+		    car.speed *=0.99;
+
+		    car.direction += car.steering;
+
+		    car.position.x += car.speed * -Math.cos(car.direction) * 0.001;
+		    car.position.z += car.speed * Math.sin(car.direction) * 0.001;
+			console.log(car.position.x,car.position.z)		    
+//		    loc.setLatitude(car.latitude);
+//		    loc.setLongitude(car.longitude);
+
+		//    console.log(car.latitude, car.longitude, car.direction);
+			/*
+		    var orientation = model.getOrientation();
+		    orientation.setHeading(360-car.direction/Math.PI*180%360);
+		    model.setOrientation(orientation);
+*/
+
+
 
 			renderer.render( scene, camera );
 
