@jin trying using Physijs

--- a/GETest.html
+++ b/GETest.html
@@ -61,7 +61,7 @@
 
     // link.setHref('http://www.edwardrockhands.com/GoogleTheftAuto/models/'+
     //   'splotchy_box.dae');
- link.setHref('c:/wamp/www/GoogleTheftAuto/models/collada/jeep/jeep1.dae');
+ link.setHref('http://edwardrockhands.com/GoogleTheftAuto/models/collada/jeep/jeep1.dae');
 
     model.setLink(link);
     var scale = model.getScale();
