@jin improved detection. rotate car geometry itself

--- a/index.html
+++ b/index.html
@@ -125,15 +125,19 @@
     });
 
     function animate() {
-        render();/*
+        render();
         collisions = detectCollision();
+        if ( collisions.length > 0 ) { 
+        	car.speed = 0;
+        }
         var buildings = currentMap.buildings;
         $.each(buildings, function(index, object) {
             object.material.color.setHex(0xE6E1B5);
-        })
+        });
         $.each(collisions, function(index, object) {
             object.material.color.setHex(0xD6D1A5);
-        })*/
+        });
+
         requestAnimationFrame( animate );
     }
 
@@ -144,17 +148,17 @@
     function render() {
         if(!stop){
             if(leftkey){
-              if(car.steering<0.05){ car.steering += 0.0004; }
+              if(car.steering<0.05){ car.steering += 0.004; }
             }else if(rightkey){
-              if(car.steering>-0.05){  car.steering -= 0.0004; }
+              if(car.steering>-0.05){  car.steering -= 0.004; }
             }else{
               car.steering *= 0.1;
             }
 
             if(upkey){
-              car.power = .00004;
+              car.power = .0004;
             }else if(downkey){
-              car.power = -.00004;
+              car.power = -.0004;
             }else{
               car.power = 0;
             }
@@ -162,7 +166,7 @@
             if(car.speed + car.power){
               car.speed += car.power;
             }
-
+            car.geometry.applyMatrix( new THREE.Matrix4().makeRotationZ(car.steering));
             car.direction += car.steering;
 
             car.position.x += car.speed * Math.cos(car.direction) * 0.001;
@@ -171,7 +175,7 @@
 
             car.rotation.z = car.direction;
             camera.position.x = car.position.x;
-            camera.position.z = 0.0003+Math.abs(car.speed)/5;
+            camera.position.z = 0.001+Math.abs(car.speed)/10;
             camera.position.y = car.position.y;
             camera.lookAt(car.position);
 
